# crate_registry

./: Cargo.toml  Dockerfile  docker-compose.yml  postgresql.conf
migrations/2024-06-05-171220_create_rustaceans/: up.sql
migrations/2024-06-05-171237_create_crates/: up.sql
migrations/2024-06-08-152207_create_users/: up.sql
migrations/2024-06-08-152221_create_roles/: up.sql
migrations/2024-06-08-152234_create_users_role/: down.sql  up.sql
postgres_conf/: pg_hba.con
src/: auth.rs  command.rs  lib.rs  mail.rs  main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
templates/email/: digest.html
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
