[package]
name = "crate_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono", "serde_json"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
diesel_migrations = "2.0"

[features]
default = ["diesel/postgres"]
