[package]
name = "crate_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono", "serde_json"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}
diesel_migrations = "2.0"
rocket ={ version = "0.5", features = ["json"]}
rocket_sync_db_pools ={version = "0.1.0", features = ["diesel_postgres_pool"]}
rocket_db_pools = {version = "0.2.0", features = ["deadpool_redis"]}
log='0.4.21'
clap="4.1.6"
argon2="0.5.3"
rand="0.8.5"
tera="1"
lettre="0.11.7"
env_logger = "0.11.3"

[features]
default = ["diesel/postgres"]

[dev-dependencies]
reqwest={ version = "0.12.4", features = ["json", "blocking"]}